Fix dark mode flash-on-load, move theme/lang init to head

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -62,7 +62,7 @@
   @include highlight-em;
 }
 
-body[data-theme="dark"] .hero .bio em {
+html[data-theme="dark"] .hero .bio em {
   @include highlight-em-dark;
 }
 
